@@ -76,6 +76,11 @@
 	<LI>The first page of each chapter did not use the
 	custom page number if it was placed inside the heading.
 
+	<LI>HTMLDOC did not reset the rendering cache before
+	each page when producing N-up output; this caused font
+	errors in some cases that prevented the document from
+	printing or displaying properly.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.23</H2>
